--- a/plugin.xml
+++ b/plugin.xml
@@ -16,6 +16,7 @@
 		<config-file target="res/xml/config.xml" parent="/*">
             <feature name="ScanMatic"> 
                 <param name="android-package" value="com.spendmatic.scanmatic.ScanMatic"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
 
