--- a/plugin.xml
+++ b/plugin.xml
@@ -24,6 +24,8 @@
     	<source-file src="src/android/SMCamera.java" target-dir="src/com/spendmatic/scanmatic" />
     	<source-file src="src/android/SMViewer.java" target-dir="src/com/spendmatic/scanmatic" />
     	<source-file src="src/android/Thread_FramePrep.java" target-dir="src/com/spendmatic/scanmatic" />
+
+    	<resource-file src="shutter.mp3" target="res/raw/shutter.mp3" />
 			
 	</platform>
 
