--- a/plugin.xml
+++ b/plugin.xml
@@ -13,14 +13,14 @@
 	</engines>
 
 	<platform name="android">
-		<config-file target="res/xml/config.xml" parent="/*">
+		<config-file target="config.xml" parent="/widget">
             <feature name="ScanMatic"> 
                 <param name="android-package" value="com.spendmatic.scanmatic.ScanMatic"/>
                 <param name="onload" value="true" />
             </feature>
         </config-file>
 
-        <config-file target="AndroidManifest.xml" parent="/*">
+        <config-file target="AndroidManifest.xml" parent="/manifest">
         	<uses-permission android:name="android.permission.CAMERA" />
 		    <uses-feature android:name="android.hardware.camera" />
 		    <uses-feature android:name="android.hardware.camera.autofocus" />
