--- a/plugin.xml
+++ b/plugin.xml
@@ -13,7 +13,7 @@
 	</engines>
 
 	<platform name="android">
-		<config-file target="config.xml" parent="/widget">
+		<config-file target="config.xml" parent="/*">
             <feature name="ScanMatic"> 
                 <param name="android-package" value="com.spendmatic.scanmatic.ScanMatic"/>
                 <param name="onload" value="true" />
