--- a/plugin.xml
+++ b/plugin.xml
@@ -24,6 +24,14 @@
         	<uses-permission android:name="android.permission.CAMERA" />
 		    <uses-feature android:name="android.hardware.camera" />
 		    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+            <intent-filter>
+                <data android:scheme="spendmatic" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
         </config-file>
 
     	<source-file src="src/android/ScanMatic.java" target-dir="src/com/spendmatic/scanmatic" />
