ios plugin.xml assets

--- a/plugin.xml
+++ b/plugin.xml
@@ -51,6 +51,13 @@
 		<source-file src="src/ios/ScanMatic.m"/>
 		<framework src="AVFoundation.framework" />
 		<framework src="ImageIO.framework" />
+
+		<asset src="shutter.mp3" target="shutter.mp3" />
+    	<asset src="coin.mp3" target="coin.mp3" />
+    	<asset src="cashregister.mp3" target="cashregister.mp3" />
+    	<asset src="ding.mp3" target="ding.mp3" />
+    	<asset src="alarm.mp3" target="alarm.mp3" />
+
 	</platform>
 	
 </plugin>
